<resources>
    <string name="app_name">Pokedex</string>
    <string name="type">Type:</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="profile_picture">profilePicture</string>
    <string name="chooser_title">Choose Image</string>
    <string name="textview">pokemonNaam</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="plaatje">plaatje</string>
    <string name="please_rate_this_pokemon">Please rate this pokemon!</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="preferences">preferences</string>
    <string-array name="string_pokemon_type_array">
        <item>Normal</item>
        <item>Fire</item>
        <item>Fighting</item>
        <item>Water</item>
        <item>Flying</item>
        <item>Grass</item>
        <item>Poison</item>
        <item>Electric</item>
        <item>Ground</item>
        <item>Psychic</item>
        <item>Rock</item>
        <item>Ice</item>
        <item>Bug</item>
        <item>Dragon</item>
        <item>Ghost</item>
        <item>Dark</item>
        <item>Steel</item>
        <item>Fairy</item>
        <item>\?\?\?</item>
    </string-array>
</resources>
