<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_favorite"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/favorite"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/toolbar_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/preferences"
        app:showAsAction="ifRoom" />
</menu>