<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/details_picture"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/plaatje"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autoSizeTextType="uniform"
            android:text="@string/textview"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_picture" />

        <RatingBar
            android:id="@+id/details_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="88dp"
            android:clickable="false"
            android:isIndicator="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name" />

        <Button
            android:id="@+id/details_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:onClick="deletePokemon"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/details_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_ratingbar" />

        <Button
            android:id="@+id/details_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:onClick="editPokemon"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_delete"
            app:layout_constraintTop_toBottomOf="@+id/details_ratingbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>